Adding donation addresses

--- a/README
+++ b/README
@@ -45,3 +45,12 @@ log file
 
 If you have any query, please contact me.
 Email: hiranmoy.iitkgp@gmail.com
+
+
+Donations
+==================================
+Bitcoin: 14BwKCzHYseFX6ae9S3ArVrvZC6A3h7QZx
+Ethereum: 0x80ae5B86340d929da6D9868F1175061faE332f4C
+Dash: XwXJ2t47zi9HPFxQzfAYxirqS7bcZ3r1Kf
+Litecoin: LTek3HbMrgm2p4So69ST8MNPsWbU5vwVKE
+Decred: DsWUVKcRhyy7DqhtBk2SoGHPXkffTv79HR8
