Rig name, panel url are optional arguments now. They are essential in case of access issue in /var/run/ethos

--- a/README
+++ b/README
@@ -14,19 +14,30 @@ update: git pull
 
 Usage
 =====
-Optional argument: If it is set to "-debug", it dumps running gpu and total gpu number.
+1st optional argument: rig name shown in ***.ethosdistro.com
+              Example: 2e15d2
+2nd optional argument: json api in ethosdistro site
+              Example: "http://xyz.ethosdistro.com/?json=yes"
+These two arguments are required if there is some issue in accessing some files in "/var/run/ethos".
+
+Debugging optional argument: If it is set to "-debug", it dumps running gpu and total gpu number.
 
 
 sample usage:
    $ ./miner.py
-or $ ./miner.py -debug    (if you want to dump debug info)
+or $ ./miner.py 2e15d2 "http://xyz.ethosdistro.com/?json=yes"
+
+  (if you want to dump debug info)
+or $ ./miner.py -debug
+or $ ./miner.py -debug 2e15d2 "http://xyz.ethosdistro.com/?json=yes" (required in case of access problem in "/var/run/ethos")
 
 
 Cronjob setup
 =============
 Open cronjob using "crontab -e" command.
 Add following line at the end -
-  @reboot /home/ethos/ethos_monitor/miner.py
+   @reboot /home/ethos/ethos_monitor/miner.py
+or @reboot /home/ethos/ethos_monitor/miner.py 2e15d2 "http://xyz.ethosdistro.com/?json=yes"
 
 Now, restart the system. The script will launch autometically at startup.
 
